Added test with explicit waits

--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-driver=webdriver.chrome.driver
-path=d:/qa/drivers/chromedriver.exe
+driver = webdriver.chrome.driver
+path = /home/hymerka/IdeaProjects/drivers/chromedriver_linux64/chromedriver
 #driver=webdriver.edge.driver
 #path=d:/qa/drivers/msedgedriver.exe
